--- a/dapr-spring/dapr-spring-boot-starters/dapr-spring-boot-4-starter/pom.xml
+++ b/dapr-spring/dapr-spring-boot-starters/dapr-spring-boot-4-starter/pom.xml
@@ -48,6 +48,10 @@
     </dependency>
     <dependency>
       <groupId>io.dapr.spring</groupId>
+      <artifactId>dapr-spring-boot-4-autoconfigure</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.dapr.spring</groupId>
       <artifactId>dapr-spring-6-data</artifactId>
     </dependency>
     <dependency>
